--- a/index.html
+++ b/index.html
@@ -19,31 +19,31 @@
             </div>  
         </div>
         <div class="second">
-            <img src="/image/Vector.png" class="Vector1">
+            <img src="Vector.png" class="Vector1">
             <p class="psecond">Наши преимущества</p>
             <div class="secondline"></div>
             <div class="cards">
                 <div class="card1">
-                    <img src="/image/gain.png" class="cardpng">
+                    <img src="gain.png" class="cardpng">
                     <p>Надёжность нашего проекта, мы работаем с 2018 года и не раз доказывали свою надёжность!</p>
                 </div>
                 <div class="card1">
-                    <img src="/image/wrench.png" class="cardpng">
+                    <img src="wrench.png" class="cardpng">
                     <p>Частые обновления в которых мы изменяем/исправляем/добавляем что-то новое именно для вас!</p>
                 </div>
                 <div class="card1">
-                    <img src="/image/wand.png" class="cardpng">
+                    <img src="wand.png" class="cardpng">
                     <p>На нашем сервере стоит много самописных аддонов, именно они не дадут вам заскучать играя у нас!</p>
                 </div>
                 <div class="card1">
-                    <img src="/image/group.png" class="cardpng">
+                    <img src="group.png" class="cardpng">
                     <p>У нас адекватное коммьюнити на сервере, они всегда помогают игроку в его проблеме!</p>
                 </div>
             </div>
-            <img src="/image/Vector2.png" class="Vector1">
+            <img src="Vector2.png" class="Vector1">
         </div>
         <div class="last">
-            <img src="/image/last.png">
+            <img src="last.png">
         </div>
     </main>
     <footer>
